[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Rocky Roads/Enemies/shark.png" type="Texture" id=1]
[ext_resource path="res://shark.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 32.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 93.2631

[sub_resource type="CapsuleShape2D" id=8]
height = 32.0

[node name="shark" type="KinematicBody2D"]
scale = Vector2( 6, 6 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="alert" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 4 )
rotation = -1.5708
shape = SubResource( 7 )

[node name="hitboxarea" type="Area2D" parent="."]

[node name="hitbox" type="CollisionShape2D" parent="hitboxarea"]
position = Vector2( 0, 4 )
rotation = -1.5708
shape = SubResource( 8 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="area_entered" from="hitboxarea" to="." method="_on_hitboxarea_area_entered"]
[connection signal="body_entered" from="hitboxarea" to="." method="_on_hitboxarea_body_entered"]
